Changelog
=========

1.5 (unreleased)
----------------

- Add a directive ``layout`` to select a different type of layout. A layout
  type is defined on a ``Layout`` component with the help of the
  ``grokcore.component.provides`` directive. It defaults to ``ILayout``
  for compatibility.

- Change how the static resources are associated to a ``Layout``,
  using the new name ``__static_name__`` set by the template grokker.

1.4 (2011-07-13)
----------------

- Rename megrok.layout to grokcore.layout. ``application_url`` and ``flash``
  utilities have been removed, \*Form components have been renamed to
  \*FormPage.

- Added ExceptionPage, NotFoundPage and UnauthorizedPage layout-aware
  components.

- Fixed default template for grokcore.layout.Form component.

1.3 (2011-01-12)
----------------

- Compatibility with grokcore.view 2.3.

1.2.0 (2010-12-16)
------------------

- Update to use the new TemplateGrokker from grokcore.view.

1.1.0 (2010-03-03)
------------------

- ``z3c.flashmessage`` has been dropped in favor of
  ``grokcore.message``. This new package takes in charge the
  registration of the utilities and retains the existing API. The
  back-compatibility is assured.

1.0.2 (2010-02-26)
------------------

- The existence test for the `application_url` site-lookup was
  wrongly using a "if not" statement. In a case of a container, the object
  is evaluated to False if it's empty. We now use a proper "if .. is
  None". [trollfot]

1.0.1 (2010-02-25)
------------------

- Forms now inherit from `UtilityView` and therefore get the
  `application_url` and `flash` methods. Tests have been added to
  garanty the behavior. [trollfot]

1.0 (2010-02-25)
----------------

- The dependencies have been heavily cleaned up. All zope.app packages
  have been removed. We are now running with minimal dependencies and
  using the latest ZTK. This release will probably *not* run on
  `Grok 1.0`. You will need `Grok 1.1rc1` to be able to use
  it. [trollfot]
