@@ -6,7 +6,6 @@ from zope.publisher.publish import mapply
 
 import martian
 import grokcore.component as grok
-import grokcore.formlib
 import grokcore.view
 import zope.component
 import zope.errorview.browser
@@ -100,27 +99,6 @@ class LayoutAware(object):
         return mapply(self.render, (), self.request)
 
 
-class LayoutAwareFormPage(LayoutAware):
-    """A mixin to make form aware of layouts.
-    """
-    def __call__(self):
-        """Calls update and returns the layout template which calls render.
-        """
-        mapply(self.update, (), self.request)
-        if self.request.response.getStatus() in (302, 303):
-            # A redirect was triggered somewhere in update().  Don't
-            # continue rendering the template or doing anything else.
-            return
-        # update_form() is what make a layout-aware form different from
-        # 'regular" layout-aware component.
-        self.update_form()
-        if self.request.response.getStatus() in (302, 303):
-            return
-        self.layout = zope.component.getMultiAdapter(
-            (self.request, self.context), ILayout)
-        return self.layout(self)
-
-
 class Page(LayoutAware, grokcore.view.View):
     """A view class.
     """
@@ -153,43 +131,3 @@ class UnauthorizedPage(
         ):
     grok.context(zope.security.interfaces.IUnauthorized)
     grok.baseclass()
-
-
-# Default forms for form without the html and body tags
-default_form_template = grokcore.view.PageTemplateFile(
-    os.path.join('templates', 'default_edit_form.pt'))
-default_form_template.__grok_name__ = 'default_edit_form'
-
-default_display_template = grokcore.view.PageTemplateFile(
-    os.path.join('templates', 'default_display_form.pt'))
-default_display_template.__grok_name__ = 'default_display_form'
-
-grokcore.view.templatedir('templates')
-
-
-class FormPage(LayoutAwareFormPage, grokcore.formlib.Form):
-    """A form base class.
-    """
-    grok.baseclass()
-    template = default_form_template
-
-
-class AddFormPage(LayoutAwareFormPage, grokcore.formlib.AddForm):
-    """Base add form.
-    """
-    grok.baseclass()
-    template = default_form_template
-
-
-class EditFormPage(LayoutAwareFormPage, grokcore.formlib.EditForm):
-    """Base edit form.
-    """
-    grok.baseclass()
-    template = default_form_template
-
-
-class DisplayFormPage(LayoutAwareFormPage, grokcore.formlib.DisplayForm):
-    """Base display form.
-    """
-    grok.baseclass()
-    template = default_display_template
