@@ -1,9 +1,6 @@
 <configure
-   xmlns="http://namespaces.zope.org/zope"
-   xmlns:grok="http://namespaces.zope.org/grok">
-
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:grok="http://namespaces.zope.org/grok">
   <include package="grokcore.layout" file="meta.zcml" />
   <include package="grokcore.view" />
-  <include package="grokcore.formlib" />
-
 </configure>
