@@ -1,12 +1,8 @@
 <configure
-   xmlns="http://namespaces.zope.org/zope"
-   xmlns:grok="http://namespaces.zope.org/grok">
-
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:grok="http://namespaces.zope.org/grok">
   <include package="grokcore.component" file="meta.zcml" />
   <include package="grokcore.security" file="meta.zcml" />
   <include package="grokcore.view" file="meta-minimal.zcml" />
-  <include package="grokcore.formlib" file="meta.zcml" />
-
   <grok:grok package=".meta" />
-
 </configure>
